--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/brands/
+    - assets/icons/social_media/
     - assets/images/
     - assets/logos/
     - assets/images/on_boarding_images/
